infrastructure/envoy/envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: http_listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 80 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: /dev/stdout
                route_config:
                  virtual_hosts:
                    - name: partituras_services
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/download"
                          route:
                            prefix_rewrite: "/"
                            cluster: pdf_service
                        - match:
                            prefix: "/api/"
                          route:
                            prefix_rewrite: "/"
                            cluster: graphql_service
                        - match:
                            prefix: "/"
                          route:
                            cluster: frontend_service
                http_filters:
                  - name: envoy.filters.http.gzip
                  - name: envoy.filters.http.router

  clusters:
    - name: frontend_service
      type: STRICT_DNS
      connect_timeout: 1s
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: frontend_service
        endpoints:
          lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: localhost, port_value: 3000 }
    - name: graphql_service
      type: STRICT_DNS
      connect_timeout: 1s
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: graphql_service
        endpoints:
          lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: localhost, port_value: 4000 }
    - name: pdf_service
      type: STRICT_DNS
      connect_timeout: 10s
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: pdf_service
        endpoints:
          lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: localhost, port_value: 4001 }
